# OOP-course-projects

LodeRunner/: CMakeLists.txt  README.txt
LodeRunner/include/: Board.h  CMakeLists.txt  Controller.h  Coord.h  Enemy.h  Location.h  Macros.h  Money.h  Player.h  io.h
LodeRunner/src/: Board.cpp  Board.txt  CMakeLists.txt  Controller.cpp  Coord.cpp  Enemy.cpp  Player.cpp  Utilities.cpp  io.cpp  main.cpp
LodeRunnerProject/: CMakeLists.txt  LodeRunner.cpp  LodeRunner.h  README.txt
LodeRunnerProject/include/: Animation.h  Button.h  CMakeLists.txt  Coin.h  Controller.h  Editor.h  Enemy.h  Game.h  Gift.h  MainMenu.h  Map.h  Menu.h  Money.h  MoveableObject.h  Panel.h  Player.h  SmartEnemy.h  Sound.h  Sounds.h  StandartEnemy.h  StaticObject.h  StupidEnemy.h  TakeableObject.h  TextButton.h  TextureButton.h  Textures.h  Well.h  WorldObject.h  macros.h
LodeRunnerProject/resources/: CMakeLists.txt  board1.txt  board2.txt  board3.txt  board4.txt
LodeRunnerProject/src/: Animation.cpp  Button.cpp  CMakeLists.txt  Controller.cpp  Editor.cpp  Enemy.cpp  Game.cpp  MainMenu.cpp  Map.cpp  Menu.cpp  Money.cpp  MoveableObject.cpp  Panel.cpp  Player.cpp  SmartEnemy.cpp  Sound.cpp  Sounds.cpp  StandartEnemy.cpp  StupidEnemy.cpp  TakeableObject.cpp  (+6 more)
MapEditor/: CMakeLists.txt  README.txt
Operators/: CMakeLists.txt  README.txt
aaa/: CMakeLists.txt  README.txt
aaa/include/: CMakeLists.txt  IsoscelesTriangle.h  Utilities.h
aaa/src/: CMakeLists.txt  EquilateralTriangle.cpp  IsoscelesTriangle.cpp  Rectangle.cpp  main.cpp
ex1_omar_yousef_hasan_yousef/: CMakeLists.txt  README.txt
(+47 files in other folders)
